--- a/Halloumi.Common.Windows/Halloumi.Common.Windows.csproj
+++ b/Halloumi.Common.Windows/Halloumi.Common.Windows.csproj
@@ -54,6 +54,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ComponentFactory.Krypton.Design">
+      <HintPath>..\Components\ComponentFactory.Krypton.Design.dll</HintPath>
+    </Reference>
     <Reference Include="ComponentFactory.Krypton.Toolkit">
       <HintPath>..\Components\ComponentFactory.Krypton.Toolkit.dll</HintPath>
     </Reference>
